docs(gaps): close TE-5 as could-not-reproduce; move to archive
The JPMS reflective-access failure under neotest replay no longer reproduces on
re-check (possibly resolved by the re-sync the TE-4 schema change forces, or
environment-specific). Move TE-5 out of the active M2 slice to gaps-archive.md
with a could-not-reproduce note; reopen with a fresh repro if it returns.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>